[package]
name = "protocol-chal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
clap = { version = "4.1.8", features = ["derive"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
tokio = { version = "1.26.0", features = [
    "net",
    "macros",
    "rt-multi-thread",
    "io-util",
] }
